不透明度の設定を、「全体」と「背景」に分けた

--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -27,9 +27,10 @@
     </Window.Resources>
 
     <Grid x:Name="MainGrid" Background="Transparent">
-        <Grid x:Name="BaseGrid_ForAlphaChannel" Background="White" Visibility="Hidden"></Grid>
         <Grid x:Name="BaseGrid" Background="White">
             <Grid x:Name="MainContent" Margin="5">
+                <Grid x:Name="Bg_ForTransparencySetting" Background="White" Visibility="Hidden">
+                </Grid>
                 <local:TileContainer
                     Order="0"
                     x:Name="TileContainer1"
@@ -50,6 +51,7 @@
                 </local:TileContainer>
             </Grid>
         </Grid>
+            
         <Rectangle x:Name="FullScreenBase_TopLeft" Fill="Black" Visibility="Hidden"
                    HorizontalAlignment="Left" VerticalAlignment="Top"></Rectangle>
         <Rectangle x:Name="FullScreenBase_BottomRight" Fill="Black" Visibility="Hidden"
