読み込み順序設定に「指定しない」の項目追加
複数フォルダを読み込んだ時に、ファイルパス順などではなく、読み込んだ順に並べる目的の為

--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -58,6 +58,7 @@
                             <ComboBoxItem>更新日時(新しい順)</ComboBoxItem>
                             <ComboBoxItem>更新日時(古い順)</ComboBoxItem>
                             <ComboBoxItem>ランダム</ComboBoxItem>
+                            <ComboBoxItem>指定しない</ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
                     <CheckBox x:Name="TopMost" Click="TopMost_Click" Margin="0,4">最前面表示</CheckBox>
