画像ロード時に、読み込み中であることを示すメッセージを表示
VSを通して実行しても、レンダリング更新がうまくいかない。exeを直で実行してテストする必要あり

--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -98,7 +98,7 @@
                     </StackPanel>
 
                     <StackPanel Margin="0,2,0,4" Orientation="Horizontal">
-                        <TextBlock Width="90">グリッド線の幅</TextBlock>
+                        <TextBlock Width="90">グリッド線の太さ</TextBlock>
                         <ComboBox x:Name="TilePadding"
                                   IsEditable="True"
                                   Loaded="TilePadding_Loaded"
