--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -353,6 +353,14 @@
                 >
         </Border>
 
-
+        <!-- 読み込み中メッセージ -->
+        <Grid x:Name="WaitingMessageBase"
+                   Background="White" Opacity="0.8" Visibility="Hidden" >
+            <Label HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" 
+                   FontSize="25"
+                   Content="読み込み中...">
+            </Label>
+        </Grid>
     </Grid>
 </Window>
