行数が列数より多い(5行1列等)場合、BitmapSourceのピクセル数が大きくなる問題を修正
行数・列数、アスペクト比により、BitmapDecodePixelOfTile の値が変動するようにした
また幅と限定せず、高さと幅の２要素(Sizeオブジェクト)を持つようにした

--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -163,9 +163,9 @@
                     </StackPanel>
                     <CheckBox x:Name="ApplyRotateInfoFromExif" Click="ApplyRotateInfoFromExif_Click">Exifの回転・反転情報を反映させる</CheckBox>
                     <StackPanel Orientation="Horizontal" Margin="0,4">
-                        <Label>バックバッファの幅(ピクセル値)</Label>
-                        <ComboBox x:Name="BitmapDecodeTotalPixelWidth"
-                                  SelectionChanged="BitmapDecodeTotalPixelWidth_SelectionChanged"
+                        <Label>バックバッファのサイズ(ピクセル値)</Label>
+                        <ComboBox x:Name="BitmapDecodeTotalPixel"
+                                  SelectionChanged="BitmapDecodeTotalPixel_SelectionChanged"
                                   SelectedValuePath="Content"
                                   ToolTipService.ShowDuration="50000"
                                   Margin="8,0" Width="55" >
