履歴機能の実装
アイテム上での右クリックで、以下のコンテキストメニュー
+ 追加読み込み
+ エクスプローラーで開く

履歴数の上限等の設定ダイアログは未実装

--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -103,6 +103,7 @@
                         <MenuItem Style="{StaticResource ToolbarMenuItemStyle}"
                             ToolTip="読み込み"
                             x:Name="MenuItem_Load"
+                            SubmenuOpened="MenuItem_Load_SubmenuOpened"
                                   >
                             <MenuItem.Header>
                                 <Border Width="25" Height="15">
